[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/projectile/projectile.gd" type="Script" id=1]
[ext_resource path="res://src/projectile/shoot.wav" type="AudioStream" id=2]

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 1500

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -16, 0, 0, -8, 16, 0, 0, 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4, 0, 0, -2, 4, 0, 0, 2 )

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
